--- a/index.njk
+++ b/index.njk
@@ -5,68 +5,37 @@ layout: layouts/base.njk
 
 
 <main data-barba="container" data-barba-namespace="home">
-  <header class="fixed top-0 flex items-center w-full px-6 md:px-8 pt-6 z-20">
-    <div class="hidden lg:block flex-1">
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[#444444] hover:text-[#444444]/80 duration-200">Published</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[#444444]/40 hover:text-[#444444]/80 duration-200">Work in Progress</a>
-        </li>
-      </ul>
-    </div>
+  <h1 class="fixed top-0 left-0 mt-6 ml-6 sm:mt-8 sm:ml-8 z-40 font-medium text-base leading-none text-black/70">
+    © Selected Works by Jin <span class="hidden md:inline">Su Park</span>
+  </h1>
 
-    <div class="flex-1 flex lg:hidden">
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Github</a>
-        </li>
-      </ul>
-    </div>
+  <div class="fixed top-0 right-0 mt-6 mr-6 sm:mt-8 sm:mr-8 z-40">
+    <ul class="flex items-center gap-5">
+      <li class="flex items-center">
+        <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Github</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
+      </li>
+      
+      {# <li class="flex lg:hidden items-center">
+        <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
+          Published
+          <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
+        </a>
+      </li> #}
+      <li class="flex items-center lg:ml-1">
+        <button class="w-4 h-4 rounded-full overflow-hidden border border-black">
+          <div class="w-[8px] h-4 bg-black"></div>
+        </button>
+      </li>
+    </ul>
+  </div>
 
-    <div class="hidden lg:block font-medium text-base leading-none text-black/70">
-      © Selected Works by Jin Su Park
-    </div>
-
-
-
-    <div class="flex-1 flex justify-end">
-      <ul class="flex items-center gap-5">
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Twitter</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Github</a>
-        </li>
-        <li class="flex lg:hidden items-center">
-          <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
-            Published
-            <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
-          </a>
-        </li>
-        <li class="flex items-center lg:ml-1">
-          <button class="w-4 h-4 rounded-full overflow-hidden border border-black">
-            <div class="w-[8px] h-4 bg-black"></div>
-          </button>
-        </li>
-      </ul>
-    </div>
-  </header>
-
-  <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 overflow-auto w-full md:w-auto flex items-center">
+  <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 overflow-auto w-full flex items-center justify-center">
     <div class="flex items-center rounded-md bg-black shadow-lg overflow-auto">
       <ul class="flex items-center whitespace-nowrap pl-5">
         <li class="flex items-center">
@@ -87,6 +56,19 @@ layout: layouts/base.njk
         <li class="flex items-center">
           <a href="#" class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
         </li>
+      </ul>
+      <ul class="flex items-center">
+        <li class="flex items-center">
+          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">
+            <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 32H448V480H0V32z"/></svg>
+          </a>
+        </li>
+        <li class="flex items-center">
+          <a href="#" class="h-[42px] flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">
+            <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M192 32H0V224H192V32zm0 256H0V480H192V288zM256 32V224H448V32H256zM448 288H256V480H448V288z"/></svg>
+          </a>
+        </li>
+
       </ul>
     </div>
   </div>
@@ -114,39 +96,30 @@ layout: layouts/base.njk
   </div>
   
 
-  <div class="relative overflow-hidden pt-[144px] sm:pt-[124px] lg:pt-[144px] xl:pt-[164px] 2xl:pt-[184px]">
-    
-
-    <div class="relative w-[288px] sm:w-[320px] lg:w-[384px] 2xl:w-[600px] aspect-square mb-[100px] sm:mb-[80px] lg:mb-[100px] xl:mb-[120px] 2xl:mb-[140px] mx-auto rounded-full bg-gradient-to-r from-white to-white/0">
-      
-    </div>
-
-    <div class="px-6 md:px-8 mb-12 z-50">
-      <h3 class="max-w-[640px] mx-auto text-black/50 text-base font-regular leading-snug text-justify">
-        Hey there, I am an 35 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
-      </h3>
-    </div>
-
-    {# <div class="md:hidden relative z-10 p-6">
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[black] hover:text-[black]/80 duration-200">Published</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[black]/30 hover:text-[black]/80 duration-200">Work in Progress</a>
-        </li>
-      </ul>
-    </div> #}
-
-    {# <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[700px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
-      Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
-    </div> #}
-    {# <div class="absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[780px] p-6 text-black/[.12] text-base md:text-xl leading-snug md:leading-7">
-      Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
-    </div> #}
+  {# Circle #}
+  <div class="relative overflow-hidden py-[100px] sm:py-[100px] lg:py-[100px] xl:py-[120px] 2xl:py-[150px]">
+    <div class="relative w-full max-w-[340px] sm:max-w-[360px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0"></div>
   </div>
 
-  <section class="w-full">
+  <section class="w-full bg-white">
+    <div class="grid grid-cols-1 md:grid-cols-2 px-6 md:px-8 py-8">
+      <h3 class="mb-8 md:mb-0 max-w-[512px] text-black/50 text-base font-regular leading-snug">
+        Carl Beaverson is an award-winning Web Developer, currently living & working abroad. A partner at <a class="underline decoration-slate-300 hover:decoration-slate-500">Groundcrew</a>, his work is focused on creating bespoke, effective & engaging digital experiences.
+      </h3>
+      <div class="md:flex justify-end items-center">
+        <ul class="grid grid-cols-2 md:gap-20">
+          <li>
+            <div class="text-xl font-medium text-black/80">65</div>
+            <div class="text-sm font-medium text-black/50">Projects Published</div>
+          </li>
+          <li>
+            <div class="text-xl font-medium text-black/80">4k+</div>
+            <div class="text-sm font-medium text-black/50">Code Contriutions</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <ul class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 2xl:grid-cols-6 gap-1">
       <li class="bg-[#F3F3F3] overflow-hidden">
         <a href="/works/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
