--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -954,6 +954,16 @@ video {
   padding-bottom: 100px;
 }
 
+.py-\[6px\] {
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.py-\[60px\] {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
