--- a/index.njk
+++ b/index.njk
@@ -97,8 +97,8 @@ layout: layouts/base.njk
   
 
   {# Circle #}
-  <div class="relative overflow-hidden py-[60px] sm:py-[100px] lg:py-[100px] xl:py-[120px] 2xl:py-[150px]">
-    <div class="relative w-full max-w-[340px] sm:max-w-[360px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0"></div>
+  <div class="relative overflow-hidden aspect-square flex items-center justify-center">
+    <div class="relative w-full max-w-[320px] sm:max-w-[360px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0"></div>
   </div>
 
   <section class="w-full bg-white">
