--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,7 +60,8 @@
   <body 
     class="antialiased text-slate-600 font-normal"
     data-barba="wrapper"
-    x-data="
+    x-data="{
+      gridCols: 2
     }"
   >
     {{ content | safe }}
