--- a/index.njk
+++ b/index.njk
@@ -57,10 +57,10 @@ layout: layouts/base.njk
           <a href="#" class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
         </li>
       </ul>
-      <div class="flex-none w-px h-6 bg-white/50">
+      <div class="flex-none w-px h-6 bg-white/40">
 
       </div>
-      <ul class="flex items-center px-3">
+      <ul class="flex items-center px-2">
         <li class="flex items-center">
           <a href="#" @click="gridCols = 1" :class="gridCols == 1 ? 'text-white hover:text-white/80' : 'text-white/30'" class="h-[48px] md:h-[42px] px-2 flex items-center font-medium text-sm duration-200">
             <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 32H448V480H0V32z"/></svg>
@@ -100,6 +100,8 @@ layout: layouts/base.njk
   
 
   {# Circle #}
+
+  <div class="mt-10"></div>
   <div class="relative overflow-hidden aspect-square md:aspect-auto py-0 md:py-[100px] flex items-center justify-center">
     <div class="relative w-full max-w-[320px] sm:max-w-[360px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0"></div>
   </div>
@@ -123,7 +125,7 @@ layout: layouts/base.njk
       </div>
     </div>
 
-    <ul class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 2xl:grid-cols-6 gap-1">
+    <ul class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 2xl:grid-cols-6 gap-0.5 sm:gap-1">
       <li class="bg-[#F3F3F3] overflow-hidden">
         <a href="/works/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
           <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
