--- a/index.njk
+++ b/index.njk
@@ -101,7 +101,7 @@ layout: layouts/base.njk
 
   {# Circle #}
 
-  <div class="mt-10"></div>
+  <div class="mt-10 sm:mt-0"></div>
   <div class="relative overflow-hidden aspect-square md:aspect-auto py-0 md:py-[100px] flex items-center justify-center">
     <div class="relative w-full max-w-[320px] sm:max-w-[360px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0"></div>
   </div>
