--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,9 +60,7 @@
   <body 
     class="antialiased text-slate-600 font-normal"
     data-barba="wrapper"
-    x-data="{
-      gridCols: 2
-    }"
+    x-data="main"
   >
     {{ content | safe }}
 
