--- a/index.njk
+++ b/index.njk
@@ -4,6 +4,7 @@ layout: layouts/base.njk
 ---
 
 
+
 <main data-barba="container" data-barba-namespace="home">
   <h1 class="fixed top-0 left-0 mt-6 ml-6 sm:mt-8 sm:ml-8 z-40 font-medium text-base leading-none text-black/70 dark:text-white/80">
     © Selected Works by Jin <span class="hidden md:inline">Su Park</span>
@@ -100,10 +101,9 @@ layout: layouts/base.njk
   
 
   {# Circle #}
-
-  <div class="mt-10 sm:mt-0"></div>
+  <div class="mt-[12vw] sm:mt-0"></div>
   <div class="relative overflow-hidden aspect-square md:aspect-auto py-0 md:py-[100px] flex items-center justify-center">
-    <div class="relative w-full max-w-[320px] sm:max-w-[360px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0 dark:from-white/20 dark:to-white/0"></div>
+    <div class="relative w-full max-w-[320px] sm:max-w-[448px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0 dark:from-white/20 dark:to-white/0"></div>
   </div>
 
   <section class="w-full bg-white dark:bg-[#121212]">
