--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -521,6 +521,10 @@ video {
   padding-left: 1rem;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .fixed {
   position: fixed;
 }
@@ -571,6 +575,10 @@ video {
 
 .z-\[60\] {
   z-index: 60;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
 .mx-auto {
@@ -630,6 +638,34 @@ video {
   margin-top: 5%;
 }
 
+.mt-\[50\%\] {
+  margin-top: 50%;
+}
+
+.mt-\[4vw\] {
+  margin-top: 4vw;
+}
+
+.mt-\[10vw\] {
+  margin-top: 10vw;
+}
+
+.mt-\[15vw\] {
+  margin-top: 15vw;
+}
+
+.mt-\[14vw\] {
+  margin-top: 14vw;
+}
+
+.mt-\[13vw\] {
+  margin-top: 13vw;
+}
+
+.mt-\[12vw\] {
+  margin-top: 12vw;
+}
+
 .flex {
   display: flex;
 }
@@ -644,6 +680,10 @@ video {
 
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
 }
 
 .h-14 {
@@ -753,6 +793,10 @@ video {
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-1 {
@@ -896,6 +940,16 @@ video {
 
 .fill-current {
   fill: currentColor;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-6 {
@@ -1364,6 +1418,14 @@ video {
 
   .sm\:max-w-\[360px\] {
     max-width: 360px;
+  }
+
+  .sm\:max-w-\[384px\] {
+    max-width: 384px;
+  }
+
+  .sm\:max-w-\[448px\] {
+    max-width: 448px;
   }
 
   .sm\:gap-1 {
