--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -3,126 +3,80 @@ title: Sample
 layout: layouts/base.njk
 ---
 
+
+
 <main data-barba="container" data-barba-namespace="page">
-  <header class="fixed top-0 flex items-center w-full px-6 md:px-8 pt-6 z-20 lemon">
-    <div class="hidden lg:block flex-1">
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[#444444] hover:text-[#444444]/80 duration-200">Published</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[#444444]/40 hover:text-[#444444]/80 duration-200">Work in Progress</a>
-        </li>
-      </ul>
-    </div>
+  <h1 class="fixed top-0 left-0 mt-6 ml-6 sm:mt-8 sm:ml-8 z-40 font-medium text-base leading-none text-black/70 dark:text-white/80">
+    © Through All Seasons
+  </h1>
 
-    <div class="flex-1 flex lg:hidden">
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Github</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="hidden lg:block font-medium text-base leading-none text-black/70">
-      © Selected Works by Jin Su Park
-    </div>
-
-
-
-    <div class="flex-1 flex justify-end">
-      <ul class="flex items-center gap-5">
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">About</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">CV</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Twitter</a>
-        </li>
-        <li class="hidden lg:flex items-center">
-          <a href="#" class="font-medium text-sm text-black/40 hover:text-black/80 duration-200">Github</a>
-        </li>
-        <li class="flex lg:hidden items-center">
-          <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
-            Published
-            <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
-          </a>
-        </li>
-        <li class="flex items-center lg:ml-1">
-          <button class="w-4 h-4 rounded-full overflow-hidden border border-black">
-            <div class="w-[8px] h-4 bg-black"></div>
-          </button>
-        </li>
-      </ul>
-    </div>
-  </header>
+  <div class="fixed top-0 right-0 mt-6 mr-6 sm:mt-8 sm:mr-8 z-40">
+    <ul class="flex items-center gap-5">
+      <li class="flex items-center">
+        <a href="#" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="#" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
+      </li>
+      <li class="hidden lg:flex items-center">
+        <a href="#" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
+      </li>
+      
+      {# <li class="flex lg:hidden items-center">
+        <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
+          Published
+          <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
+        </a>
+      </li> #}
+      <li class="flex items-center lg:ml-1">
+        <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
+          <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
+        </button>
+      </li>
+    </ul>
+  </div>
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center">
-    <a href="/" class="flex items-center justify-center flex-none w-14 h-14 rounded-full bg-black text-white duration-200 hover:scale-110">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+    <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
+      <div class="absolute top-0 left-0 flex-none w-14 h-14 rounded-full bg-black dark:bg-white dark:text-black duration-200 hover:scale-110">
+
+      </div>
+      <svg class="relative z-10 pointer-events-none" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
 
     </a>
   </div>
 
 
+  {# Circle #}
+  <div class="mt-[12vw] sm:mt-0"></div>
+  <div class="relative overflow-hidden aspect-square md:aspect-auto py-0 md:py-[100px] flex items-center justify-center">
+    {# <div class="relative w-full max-w-[320px] sm:max-w-[448px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0 dark:from-white/20 dark:to-white/0"></div> #}
 
-  <div class="relative overflow-hidden pt-[144px] sm:pt-[124px] lg:pt-[144px] xl:pt-[164px] 2xl:pt-[184px]">
-    
-    
-    <div class="relative w-[288px] sm:w-[320px] lg:w-[384px] 2xl:w-[600px] mb-[100px] sm:mb-[80px] lg:mb-[100px] xl:mb-[120px] 2xl:mb-[140px] mx-auto aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
+    <div class="relative w-full max-w-[320px] sm:max-w-[448px] lg:max-w-[380px] 2xl:max-w-[600px] aspect-square mx-auto rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
       <div class="bg-white w-[100%] h-[100%] rounded-full"></div>
       <img src="https://via.placeholder.com/150" class="absolute top-0 left-0 mt-[5%] ml-[15%] max-w-none w-[150%] h-[150%] group-hover/thumb:ml-[5%] duration-200">
     </div>
-
-
-    <div class="px-6 md:px-8 mb-12 z-50">
-      <h3 class="max-w-[640px] mx-auto text-black/50 text-base font-regular leading-snug text-justify">
-        Throughout Journey (2023) is a 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
-      </h3>
-    </div>
-
-    {# <div class="md:hidden relative z-10 p-6">
-      <ul class="flex items-center gap-5">
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[black] hover:text-[black]/80 duration-200">Published</a>
-        </li>
-        <li class="flex items-center">
-          <a href="#" class="font-medium text-sm text-[black]/30 hover:text-[black]/80 duration-200">Work in Progress</a>
-        </li>
-      </ul>
-    </div> #}
-
-    {# <div class="hidden md:block absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[700px] p-6 mix-blend-overlay text-black text-base md:text-xl leading-snug md:leading-7">
-      Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is.
-    </div> #}
-    {# <div class="absolute left-1/2 translate-x-[-50%] md:text-center w-full max-w-[780px] p-6 text-black/[.12] text-base md:text-xl leading-snug md:leading-7">
-      Throughout the past 18 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
-    </div> #}
   </div>
+
+
 
   <section class="w-full">
     <div class="grid grid-cols-2 gap-1 mb-10">
       <div>
-        <img src="https://images.unsplash.com/photo-1494438639946-1ebd1d20bf85?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3267&q=80" class="">
+        <img src="https://cdn.dribbble.com/userupload/4797787/file/original-dd855009ad53809455f97f6558cc6de0.jpg?compress=1&resize=1504x838" class="aspect-[4/3] object-cover">
       </div>
       <div>
-        <img src="https://images.unsplash.com/photo-1494438639946-1ebd1d20bf85?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3267&q=80" class="">
+        <img src="https://cdn.dribbble.com/userupload/4606557/file/original-ad83b97ed87fa135e039e4680755da2d.jpg?compress=1&resize=1504x1003" class="aspect-[4/3] object-cover">
+      </div>
+
+      <div class="col-span-2">
+        <img src="https://cdn.dribbble.com/userupload/4606338/file/original-951c8a79bcf94bc90de579d733add00d.png?compress=1&resize=1504x846" class="aspect-[4/3] object-cover">
       </div>
     </div>
 
-    <div class="px-6 md:px-8 mb-10 z-50">
-      <h3 class="max-w-[640px] mx-auto text-black/50 text-base font-regular leading-snug text-justify">
-        Hey there, I am an 35 years, growing from a little toddler who painted his walls with sharpies, I still heed my curiosity to build and create. Not sure if calling myself a minimalist matters, but the concept helps me to simplify my life and make room for what I think is essential: relationships, creation, solitude and chai latte.
-      </h3>
-    </div>
+    
+
+
   </section>
   
 </main>
