--- a/index.njk
+++ b/index.njk
@@ -37,25 +37,25 @@ layout: layouts/base.njk
   </div>
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 overflow-auto w-full flex items-center justify-center">
-    <div class="flex items-center rounded-md bg-black dark:bg-white shadow-lg overflow-auto">
+    <div class="flex items-center rounded-md bg-black/70 dark:bg-white/20 backdrop-blur-md shadow-lg overflow-auto">
       <ul class="flex items-center whitespace-nowrap pl-5 overflow-auto">
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white hover:text-white/80 dark:text-black/80 dark:hover:text-black/80 duration-200">All</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 dark:text-black/30 dark:hover:text-black/60 duration-200">Product</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 dark:text-black/30 dark:hover:text-black/60 duration-200">UI/UX</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">UI/UX</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 dark:text-black/30 dark:hover:text-black/60 duration-200">Identity</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 dark:text-black/30 dark:hover:text-black/60 duration-200">Development</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 dark:text-black/30 dark:hover:text-black/60 duration-200">Art Direction</a>
+          <a href="#" class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
         </li>
       </ul>
       <div class="flex-none w-px h-6 bg-white/40 dark:bg-black/20">
@@ -78,7 +78,7 @@ layout: layouts/base.njk
   </div>
 
   <div class="hidden md:flex fixed z-[60] right-0 bottom-0 mb-8 mr-8 items-center">
-    <div class="rounded-md bg-white dark:bg-black shadow-lg">
+    <div class="rounded-md bg-white dark:bg-black/80 backdrop-blur-md shadow-lg">
       <ul class="flex items-center gap-4 px-4">
         <li class="flex items-center">
           <a href="#" class="h-[42px] flex items-center font-medium text-sm text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">
