--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -37,7 +37,7 @@ layout: layouts/base.njk
   </div>
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center">
-    <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
+    <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white dark:text-black">
       <div class="absolute top-0 left-0 flex-none w-14 h-14 rounded-full bg-black dark:bg-white dark:text-black duration-200 hover:scale-110">
 
       </div>
